--- a/userDetail/src/main/resources/application.properties
+++ b/userDetail/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=userDetail
 #server.port=8081
-spring.data.mongodb.uri=mongodb+srv://mugilanspunky:mugilanspunky@cluster0.uxxzq5m.mongodb.net/user
+spring.data.mongodb.uri=${MONGOURL}
 
 spring.ai.mcp.server.name=LocalUser-server
 spring.ai.mcp.server.version=0.0.1
